# yomu

./: README.md  all_summary.sh  convert2pdf.py  pyproject.toml  summary_ex.sh  test_run.sh  yomu.py  yomu_all.py
prompts/: mcq_100.md  questions.md  summary.md  theory_5_applied.md  theory_5_direct.md
