[project]
name = "yomu"
version = "0.1.0"
description = "AI-powered lecture summary/question generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "fpdf2>=2.8.2",
    "openai>=1.51.0",
    "pillow>=11.1.0",
    "pypdf>=5.3.1",
    "pypdfium2>=4.30.0",
]
